--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@
                 <div class="footer-section">
                     <h4>Redes Sociais</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link">Instagram</a>
-                        <a href="#" class="social-link">Facebook</a>
-                        <a href="#" class="social-link">Twitter</a>
+                        <a href="https://www.instagram.com/aurabelle.art?igsh=MTRmaWtsbmZkMmMwZA%3D%3D" class="social-link">Instagram</a>
                     </div>
                 </div>
             </div>
